--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 </head>
 
 <body>
-    <!-- START HERE -->
+    <div class="main">
+        <h1 class="display-2" id="title">Survey Form</h1>
+        <p class= "lead" id="description"> Thank you for taking the time to complete this survey.</p>
+    </div>
+    
+
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
