commit on master

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     <div class="main">
         <h1 class="display-2" id="title">Survey Form</h1>
         <p class= "lead" id="description"> Thank you for taking the time to complete this survey.</p>
-        
+ <div class="main-content">
+     <div class="form-content">
+         <form id="survey-form">
+
+         </form>
+     </div>
+ </div>
     </div>
     
 
